<?xml version="1.0"?>
<package format="2">
  <name>pixhawk_imu_to_eular</name>
  <version>0.0.0</version>
  <description>The pixhawk_imu_to_eular package</description>

  <maintainer email="aaryan.murgunde@gmail.com">Aaryan Murgunde</maintainer>
  <license>TODO</license>
  <author email="aaryan.murgunde@gmail.com">Aaryan Murgunde</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

</package>
